--- a/src/com/healingtouch/view/Login.fxml
+++ b/src/com/healingtouch/view/Login.fxml
@@ -15,61 +15,117 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#dragged" onMousePressed="#pressed" prefHeight="600.0" prefWidth="1000.0" styleClass="anchorPane" stylesheets="@../resources/css/application.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.healingtouch.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
+	minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#dragged"
+	onMousePressed="#pressed" prefHeight="600.0" prefWidth="1000.0"
+	styleClass="anchorPane" stylesheets="@../resources/css/application.css"
+	xmlns="http://javafx.com/javafx/8.0.171"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.healingtouch.controller.LoginController">
 	<children>
-		<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" styleClass="sidebarLeft" stylesheets="@../resources/css/application.css">
+		<Pane maxHeight="-Infinity" maxWidth="-Infinity"
+			minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0"
+			prefWidth="500.0" styleClass="sidebarLeft"
+			stylesheets="@../resources/css/application.css">
 			<children>
-				<Label layoutX="183.0" layoutY="444.0" styleClass="forgetField" stylesheets="@../resources/css/application.css" text="¿Olvidaste tu contraseña?">
+				<Label layoutX="183.0" layoutY="444.0"
+					styleClass="forgetField"
+					stylesheets="@../resources/css/application.css"
+					text="¿Olvidaste tu contraseña?">
 					<cursor>
 						<Cursor fx:constant="HAND" />
 					</cursor>
 				</Label>
-				<ImageView fitHeight="150.0" fitWidth="341.0" layoutX="80.0" layoutY="116.0" pickOnBounds="true" smooth="false">
+				<ImageView fitHeight="150.0" fitWidth="341.0"
+					layoutX="80.0" layoutY="116.0" pickOnBounds="true" smooth="false">
 					<image>
 						<Image url="@../resources/images/healingtouch.png" />
 					</image>
 				</ImageView>
-				<Label fx:id="lblErrorCredentials" alignment="CENTER" contentDisplay="CENTER" layoutX="137.0" layoutY="355.0" prefHeight="17.0" prefWidth="227.0" textAlignment="CENTER" textFill="#4d1d4d">
+				<Label fx:id="lblErrorCredentials" alignment="CENTER"
+					contentDisplay="CENTER" layoutX="137.0" layoutY="355.0"
+					prefHeight="17.0" prefWidth="227.0" textAlignment="CENTER"
+					textFill="#4d1d4d">
 					<font>
 						<Font name="Segoe UI Symbol" size="10.0" />
 					</font>
 				</Label>
-            <JFXTextField fx:id="txtFieldEmailLogin" focusColor="#4d1d4d" labelFloat="true" layoutX="137.0" layoutY="261.0" prefHeight="25.0" prefWidth="227.0" promptText="Email" stylesheets="@../resources/css/application.css" />
-            <JFXPasswordField fx:id="pswdFieldPasswordLogin" focusColor="#4d1d4d" labelFloat="true" layoutX="137.0" layoutY="314.0" prefHeight="25.0" prefWidth="227.0" promptText="Contraseña" styleClass="login-text-field" stylesheets="@../resources/css/application.css" />
-            <JFXButton layoutX="133.0" layoutY="385.0" onMouseClicked="#login" prefHeight="25.0" prefWidth="227.0" style="-fx-background-color: #4d1d4d;" text="Iniciar sesión" textFill="WHITE" />
+				<JFXTextField fx:id="txtFieldEmailLogin"
+					focusColor="#4d1d4d" labelFloat="true" layoutX="137.0"
+					layoutY="261.0" prefHeight="25.0" prefWidth="227.0"
+					promptText="Email" stylesheets="@../resources/css/application.css" />
+				<JFXPasswordField fx:id="pswdFieldPasswordLogin"
+					focusColor="#4d1d4d" labelFloat="true" layoutX="137.0"
+					layoutY="314.0" prefHeight="25.0" prefWidth="227.0"
+					promptText="Contraseña" styleClass="login-text-field"
+					stylesheets="@../resources/css/application.css" />
+				<JFXButton layoutX="133.0" layoutY="385.0"
+					onMouseClicked="#login" prefHeight="25.0" prefWidth="227.0"
+					style="-fx-background-color: #4d1d4d;" text="Iniciar sesión"
+					textFill="WHITE" />
 			</children>
 		</Pane>
-		<Pane layoutX="500.0" prefHeight="600.0" prefWidth="500.0" styleClass="sidebarRight" stylesheets="@../resources/css/application.css">
+		<Pane layoutX="500.0" prefHeight="600.0" prefWidth="500.0"
+			styleClass="sidebarRight"
+			stylesheets="@../resources/css/application.css">
 			<children>
-				<Label layoutX="117.0" layoutY="39.0" text="¿Eres un paciente nuevo?" textAlignment="JUSTIFY" textFill="WHITE">
+				<Label layoutX="117.0" layoutY="39.0"
+					text="¿Eres un paciente nuevo?" textAlignment="JUSTIFY"
+					textFill="WHITE">
 					<font>
 						<Font name="Segoe UI Symbol" size="24.0" />
 					</font>
 				</Label>
-				<Label layoutX="193.0" layoutY="81.0" text="Crea una cuenta" textAlignment="JUSTIFY" textFill="WHITE">
+				<Label layoutX="193.0" layoutY="81.0" text="Crea una cuenta"
+					textAlignment="JUSTIFY" textFill="WHITE">
 					<font>
 						<Font name="Segoe UI Symbol" size="16.0" />
 					</font>
 				</Label>
-				<Label id="lblCloseApp" focusTraversable="false" layoutX="474.0" layoutY="14.0" onMouseClicked="#close" style="-fx-text-fill: #ffffff; -fx-font-size: 1.5em; -fx-font-weight: bold;" text="X" textAlignment="CENTER">
+				<Label id="lblCloseApp" focusTraversable="false"
+					layoutX="474.0" layoutY="14.0" onMouseClicked="#close"
+					style="-fx-text-fill: #ffffff; -fx-font-size: 1.5em; -fx-font-weight: bold;"
+					text="X" textAlignment="CENTER">
 					<cursor>
 						<Cursor fx:constant="HAND" />
 					</cursor>
 				</Label>
-				<Label fx:id="lblIdDuplicate" alignment="CENTER" contentDisplay="CENTER" layoutX="75.0" layoutY="505.0" prefHeight="17.0" prefWidth="350.0" textAlignment="CENTER" textFill="WHITE">
+				<Label fx:id="lblIdDuplicate" alignment="CENTER"
+					contentDisplay="CENTER" layoutX="75.0" layoutY="505.0"
+					prefHeight="17.0" prefWidth="350.0" textAlignment="CENTER"
+					textFill="WHITE">
 					<font>
 						<Font name="Segoe UI Symbol" size="10.0" />
 					</font>
 				</Label>
-            <JFXButton layoutX="75.0" layoutY="536.0" onMouseClicked="#registerPatient" prefHeight="25.0" prefWidth="350.0" style="-fx-background-color: #a8a8a8;" text="Registrate" textFill="#4d1d4d" />
-            <TextField fx:id="txtFieldNames" layoutX="75.0" layoutY="133.0" prefHeight="25.0" prefWidth="350.0" promptText="Nombres" />
-            <TextField fx:id="txtFieldSurnames" layoutX="75.0" layoutY="179.0" prefHeight="25.0" prefWidth="350.0" promptText="Apellidos" />
-            <TextField fx:id="txtFieldUserId" layoutX="75.0" layoutY="226.0" prefHeight="25.0" prefWidth="350.0" promptText="Cédula" />
-            <TextField fx:id="txtFieldPhone" layoutX="75.0" layoutY="273.0" prefHeight="25.0" prefWidth="350.0" promptText="Teléfono" />
-            <DatePicker fx:id="dtPickerBirthdate" editable="false" layoutX="75.0" layoutY="320.0" prefHeight="25.0" prefWidth="350.0" promptText="Fecha de nacimiento" />
-            <TextField fx:id="txtFieldAddress" layoutX="75.0" layoutY="368.0" prefHeight="25.0" prefWidth="350.0" promptText="Dirección" />
-            <TextField fx:id="txtFieldEmail" layoutX="75.0" layoutY="416.0" prefHeight="25.0" prefWidth="350.0" promptText="Email" />
-            <PasswordField fx:id="pswdFieldPassword" layoutX="75.0" layoutY="464.0" prefHeight="25.0" prefWidth="350.0" promptText="Contraseña" />
+				<JFXButton layoutX="75.0" layoutY="536.0"
+					onMouseClicked="#registerPatient" prefHeight="25.0"
+					prefWidth="350.0" style="-fx-background-color: #a8a8a8;"
+					text="Registrate" textFill="#4d1d4d" />
+				<TextField fx:id="txtFieldNames" layoutX="75.0"
+					layoutY="133.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Nombres" />
+				<TextField fx:id="txtFieldSurnames" layoutX="75.0"
+					layoutY="179.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Apellidos" />
+				<TextField fx:id="txtFieldUserId" layoutX="75.0"
+					layoutY="226.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Cédula" />
+				<TextField fx:id="txtFieldPhone" layoutX="75.0"
+					layoutY="273.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Teléfono" />
+				<DatePicker fx:id="dtPickerBirthdate" editable="false"
+					layoutX="75.0" layoutY="320.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Fecha de nacimiento" />
+				<TextField fx:id="txtFieldAddress" layoutX="75.0"
+					layoutY="368.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Dirección" />
+				<TextField fx:id="txtFieldEmail" layoutX="75.0"
+					layoutY="416.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Email" />
+				<PasswordField fx:id="pswdFieldPassword"
+					layoutX="75.0" layoutY="464.0" prefHeight="25.0" prefWidth="350.0"
+					promptText="Contraseña" />
 			</children>
 			<effect>
 				<DropShadow />
